--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  width: 25;
+  width: 25%;
   height:75%;
   border: 3px solid #121212;
   padding: 10px;
